# rocket-avionics

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  config.h  decoder.py  platformio.ini
include/: ahrs.h  roll-controller.h  sdcard.h  sensors.h  states.h  utils.h
include/orientation/: ahrs.h  gps.h  sensors.h
include/output/: roll-controller.h  sdcard.h  servo.h
src/: config.rs  flags.h  main.rs  rocket-avionics.cpp  states.cpp  states.rs  utils.cpp  utils.h  utils.rs
src/orientation/: ahrs.cpp  ahrs.h  ahrs.rs  gps.cpp  gps.rs  mod.rs  sensors.cpp  sensors.rs
src/output/: buzzer.rs  mod.rs  roll-controller.cpp  roll-controller.h  roll_controller.rs  sd_card.rs  sdcard.cpp  sdcard.h  servo.cpp  servo.h  servo.rs
