[package]
name = "rocket-avionics"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-embedded-hal = { version = "0.6.0", features = ["defmt"] }
embassy-executor = { version = "0.10.0", features = ["platform-cortex-m", "executor-thread", "defmt"] }
embassy-rp = { version = "0.10.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embassy-time = { version = "0.5.1", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-sync = { version = "0.8.0", features = ["defmt"] }
embassy-futures = { version = "0.1.2" }
embassy-usb = { version = "0.6.0", features = ["defmt"] }

cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.5"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
defmt = "1.1.0"
defmt-rtt = "1.2.0"

nalgebra = { version = "0.34.2", default-features = false, features = ["macros", "libm"] }
libm = "0.2.16"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-sdmmc = "0.9.0"
ws2812-pio = "0.9.0"
fixed = "1.31.0"

[profile.release]
lto = true
opt-level = 3

[profile.dev]
lto = true
opt-level = 1 # I might be doing some SWD debugging, so don't optimize too much
